Fixed hastags on mobile

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,5 +1,6 @@
   // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+
 .post-content > h2::before, .post-content > h1::before {
   content: "# ";
   margin-left: -1.2em;
@@ -29,5 +30,11 @@
 @include media-query($on-palm) {
   .footer-col {
     text-align: center;
+  }
+
+  .post-content > h2::before, .post-content > h1::before {
+    content: "# ";
+    color: #2bbc8a;
+    margin-left: 0;
   }
 }
